--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
   <head>
+  <script src="https://github.com/fairlycasual/willChromeExtension.github.io/blob/master/popupObs.js" type="text/javascript"> </script>
   <h3>Nearest weather observations by IP geolocation using <a href="http://ipinfo.io">ipinfo.io</a></h3>
 
 </head>
  <body>
   <div id="mesowest">
      <p id="obs"> </p>
-     <p onload="popupObs()">>
+     <script>
+     	popupObs()
+     </script>
      Observations courtesy of the MesoWest API service.
      </p>
   </div>
