--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
   <head>
@@ -8,10 +7,9 @@
 </head>
  <body>
   <div id="mesowest">
-     <p id="obs">Observations courtesy of the MesoWest API service.</p>
-     <script>
-     	popupObs()
-     </script>
+      <p id="obs">Observations courtesy of the MesoWest API service.
+     <button onclick="popupObs()">Get Obs</button>
+     </p>
   </div>
  </body>
 </html>
