--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,18 @@
 <!doctype html>
+
 <html>
   <head>
-  <script src="https://github.com/fairlycasual/willChromeExtension.github.io/blob/master/popupObs.js" type="text/javascript"> </script>
-  <h3>Nearest weather observations by IP geolocation using <a href="http://ipinfo.io">ipinfo.io</a></h3>
-
-</head>
- <body>
-  <div id="mesowest">
-     <p id="obs"> </p>
-     <script>
-     	popupObs()
-     </script>
-     Observations courtesy of the MesoWest API service.
+  	<meta http-equiv="Content-Security-Policy" content="style-src 'unsafe-inline'; script-src https://api.mesowest.org/ https://ipinfo.io/json/ https://*.github.com/ https://rawgit.com/fairlycasual/willChromeExtension.github.io/master/popupObsAsync.js 'unsafe-inline' 'unsafe-eval'; connect-src https://api.mesowest.net/ https://ipinfo.io/json/ https://rawgit.com/fairlycasual/willChromeExtension.github.io/master/popupObsAsync.js https://*.github.com/ 'unsafe-inline';">
+    <script src="../jquery-3.3.1.min.js"></script>
+    <script type="text/javscript" src="https://ipinfo.io/json/"></script>
+    <h3>Nearest weather observations by IP geolocation using <a href="http://ipinfo.io">ipinfo.io</a></h3>
+  </head>
+  <body>
+   <div id="mesowest">
+     <p id="obs">Observations courtesy of the MesoWest API service.
+      
      </p>
-  </div>
+   </div>
+   <script type="text/javascript" src="https://rawgit.com/fairlycasual/willChromeExtension.github.io/master/popupObsAsync.js"> </script>
  </body>
 </html>
-
