--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,6 @@
       
      </p>
    </div>
-   <script type="text/javascript" src="https://rawgit.com/fairlycasual/willChromeExtension.github.io/master/popupObsAsync.js"> </script>
+   <script type="text/javascript" src="../popupObsAsync.js"> </script>
  </body>
 </html>
